# camaras

./: .gitignore  NvrDesk.sln  README.md  docker-compose.yml
NvrDesk.Application/: NvrDesk.Application.csproj
NvrDesk.Application/Abstractions/: INvrService.cs
NvrDesk.Application/Dtos/: ChannelDto.cs  NvrDto.cs  RecordingSegmentDto.cs
NvrDesk.Application/UseCases/: NvrService.cs
NvrDesk.Application/Validation/: NvrValidator.cs
NvrDesk.Domain/Contracts/: IAuditRepository.cs  IChannelRepository.cs  IEncryptionService.cs  INvrDriver.cs  INvrDriverFactory.cs  INvrRepository.cs
NvrDesk.Infrastructure/: DependencyInjection.cs  NvrDesk.Infrastructure.csproj
NvrDesk.Presentation/: App.xaml  App.xaml.cs  NvrDesk.Presentation.csproj
NvrDesk.Tests/: NvrDesk.Tests.csproj
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py
backend/app/: main.py
backend/app/adapters/drivers/: base.py  dahua.py  factory.py  hikvision.py
backend/app/api/: deps.py
backend/app/api/routers/: nvrs.py  recordings.py  streams.py  ws.py
backend/app/core/: logging.py  settings.py
backend/app/domain/: entities.py
backend/app/infra/db/: __init__.py  models.py  session.py
backend/app/infra/security/: crypto.py
backend/app/schemas/: nvr.py  stream.py
backend/app/services/: nvr_service.py  repositories.py  stream_manager.py
backend/app/ws/: manager.py
backend/tests/: test_api_smoke.py  test_driver_urls.py
shared/: README.md
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx  (+1 more)
(+41 files in other folders)
